@@ -36,7 +36,7 @@ foreach my $mold (@{$ref_resource_list}){
     foreach my $r (@{$mold->[0]}){
         my $i = 0;
         while (($i <= $#{$r->{resources}})){
-            if (grep(/^$r->{resources}->[$i]->{resource}$/, @bad_resources)){
+            if (grep(/^$r->{resources}->[$i]->{resource}$/i, @bad_resources)){
                 die("[ADMISSION RULE] \'$r->{resources}->[$i]->{resource}\' resource is not allowed\\n");
             }
             $i++;
@@ -93,7 +93,7 @@ if (grep(/^(deploy|allow_classic_ssh)$/, @{$type_list})){
         foreach my $r (@{$mold->[0]}){
             my $i = 0;
             while (($i <= $#{$r->{resources}})){
-                if (grep(/^$r->{resources}->[$i]->{resource}$/, @bad_resources)){
+                if (grep(/^$r->{resources}->[$i]->{resource}$/i, @bad_resources)){
                     die("[ADMISSION RULE] \'$r->{resources}->[$i]->{resource}\' resource is not allowed with a deploy or allow_classic_ssh type job\\n");
                 }
                 $i++;
